fix whitespace glitch on chrome

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,14 +6,12 @@
   outline: none;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-}
-
 html,
 body,
 #__next {
-  height: 100%;
   width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-y: hidden;
 }
